--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>testv1</title>
+    <title>new page</title>
     <link rel="stylesheet" href="glider.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
