--- a/index.html
+++ b/index.html
@@ -122,9 +122,10 @@
                                     <br>molestias veritatis aut voluptate deserunt, officia assumenda laboriosam!
                                 </p>
                                 <div class="name"><strong>
-                                    malli
+                                    channa
                                 </strong>
                                 ,airtel</div>
+                                <h1>be safe</h1>
                             </div>
                             <img src="images/profile img2.png" alt="">
                         </div>
