--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                     channa
                                 </strong>
                                 ,airtel</div>
-                                <h1>be safe</h1>
+                            <p>peter england</p>
                             </div>
                             <img src="images/profile img2.png" alt="">
                         </div>
