changed the h1 tag

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
                                     malli
                                 </strong>
                                 ,airtel</div>
+                                <h1>docomo</h1>
                             </div>
                             <img src="images/profile img2.png" alt="">
                         </div>
